--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "@stripe/stripe-js": "^8.7.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "framer-motion": "^12.33.0",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.563.0",
+    "micro": "^10.0.1",
     "next": "16.1.6",
     "prisma": "^5.19.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "stripe": "^20.3.1",
+    "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
